--- a/random_quotes_generator_finished_completely.html
+++ b/random_quotes_generator_finished_completely.html
@@ -30,7 +30,7 @@
   $(document).ready(function() {
      $("#getMessage").on("click", function() {
        //now use the file I made for the quote data
-       $.getJSON("random_quotes_specialized.json", function(json) {
+       $.getJSON("random_quotes.json", function(json) {
           var yourHTML = "";
           //var all = JSON.stringify(json);
 
